# pikmin_location

./: README.md  index.html  package.json
core/: Cargo.toml
core/src/: discovery.rs  domain.rs  error.rs  main.rs
src/: env.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ddi.rs  discovery.rs  domain.rs  error.rs  location.rs  main.rs
src/ipc/: commands.ts  events.ts
src/ui/: map.ts
