[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]

#######################---框架---#######################
rusty_libimobiledevice = "0.2"
thiserror = "1.0"      # 用於建立結構化的自訂錯誤
tracing = "0.1"        # 現代化的結構化日誌系統 (取代 println!)
tracing-subscriber = "0.3"
#######################---框架---#######################

#######################---IPC---#######################
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-util = "0.7.18"
#######################---IPC---#######################

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
