[package]
name = "pikmin_location"
version = "0.1.0"
description = "A Tauri App"
edition = "2024"

[dependencies]

thiserror = "1.0"
rusty_libimobiledevice = "0.2.3" # 保留這個僅用於 discovery 快速掃描設備
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1.51.1", features = ["full"] }
#tokio-util = "0.7.18"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
